--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
-    --clr-yellow: hsl(47, 88%, 63%)
-    
+    --clr-yellow: hsl(47, 88%, 63%);
+    --clr-black: hsl(0, 0%, 0%);
+    --clr-white: hsl(50, 100%, 100%);
 }
 
 *body {
