test new branch

--- a/style.css
+++ b/style.css
@@ -10,3 +10,28 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+*body {
+    display: inline;
+    inline-size: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+*body {
+    display: inline;
+    inline-size: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+*body {
+    display: inline;
+    inline-size: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+*body {
+    display: inline;
+    inline-size: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+*body {
+    display: inline;
+    inline-size: auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
